adding part 1 and part 2

--- a/main.tex
+++ b/main.tex
@@ -183,6 +183,12 @@
 % ===============================
 
 % --- Chapter 1: Study of the existence ---
+% --- PART I: State of the Art ---
+\cleardoublepage
+\part*{Part I : State of the Art}
+\addcontentsline{toc}{part}{Part I : State of the Art}
+\thispagestyle{empty}
+
 \chapter{Étude de l'existant}
 \input{voicenotion_etude_prealable}
 
@@ -195,6 +201,12 @@
 % ===============================
 
 % --- Chapter 1: Conception (includes Visual Identity) ---
+% --- PART II: Contribution ---
+\cleardoublepage
+\part*{Part II : Contribution}
+\addcontentsline{toc}{part}{Part II : Contribution}
+\thispagestyle{empty}
+
 \chapter{Conception}
 \input{conception}
 
